<resources>
    <string name="app_name">Crypto Coins</string>
    <string name="crypto_currencies">Crypto Currencies</string>
    <string name="phantom_calculator">Phantom Calculator</string>
    <string name="symbol">Symbol</string>
    <string name="name">Name</string>
    <string name="_123456">123456</string>
    <string name="cent">Cent</string>
    <string name="decimal">Decimal</string>
    <string name="enter_area">Enter Area</string>
    <string name="olus">+</string>
    <string name="minus">-</string>
    <string name="output">Output</string>
    <string name="search_currency">Search Currency</string>
    
    
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>

    <string name="clear">C</string>
    <string name="exponent">^</string>
    <string name="paranth">( )</string>
    <string name="divide">÷</string>
    <string name="mul">×</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="point">.</string>
    <string name="eq">=</string>
    <string name="plusMinus">+/-</string>
    <string name="backspace"> </string>

    <string name="display"> Enter in a Value</string>
</resources>